UPDATES, add contact us button

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -119,6 +119,8 @@ const searchList = posts.map(({ data }) => ({
         </li>  
     ))}
     </ul>
+    <div data-tf-live="01HJ3PHGFBRPBCP7QH72GPSGX4" class="mt-8"></div>
+    <script is:inline src="//embed.typeform.com/next/embed.js"></script>
   </nav>
 </div>
 
