--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -181,32 +181,10 @@ const relatedPosts = getRelatedPosts(allPosts, slug, tags);
         
         <div class="col-span-8 md:col-start-2 md:col-span-6 lg:col-start-6 lg:ml-10 lg:col-span-3 row-span-2 text-skin-base">
 
-          <div class="lg:sticky lg:top-20">
-            <div class="text-center text-skin-accent min-w-[300px]">Advertisement</div>
-            
-            <div class="my-6 text-center">
-              <div class="ads-slot w-[300px] h-[325px] relative mx-auto">
-                <iframe class="absolute w-full h-full" src="/ads/detikcom/index.html" frameborder="0"></iframe>
-              </div>
-            </div>
+          <!-- <div class="lg:sticky lg:top-20">
+            <div class="text-center text-skin-accent min-w-[300px]">Advertisement</div>            
+          </div> -->
 
-            <div class="my-6">
-              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3982586798741178" crossorigin="anonymous"></script>
-              <!-- ad unit 1 -->
-              <ins class="adsbygoogle"
-                  style="display:block"
-                  data-ad-client="ca-pub-3982586798741178"
-                  data-ad-slot="1560677492"
-                  data-ad-format="auto"
-                  data-full-width-responsive="true">
-              </ins>
-              <script>
-                // @ts-ignore
-                (adsbygoogle = window.adsbygoogle || []).push({});
-              </script>
-            </div>
-            
-          </div>
         </div>    
       </article> 
       
