UPDATES, new post & remove detik ads

--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -190,11 +190,11 @@ const relatedPosts = getRelatedPosts(allPosts, slug, tags);
           <div class="lg:sticky lg:top-20">
             <div class="text-center text-skin-accent min-w-[300px]">Advertisement</div>  
 
-            <div class="my-6 text-center">
+            <!-- <div class="my-6 text-center">
               <div class="ads-slot w-[300px] h-[325px] relative mx-auto">
                 <iframe class="absolute w-full h-full" src="/ads/detikcom/index.html" frameborder="0"></iframe>
               </div>
-            </div>
+            </div> -->
 
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3982586798741178"
               crossorigin="anonymous"></script>
