--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -189,7 +189,7 @@ const relatedPosts = getRelatedPosts(allPosts, slug, tags);
         <div class="col-span-8 md:col-start-2 md:col-span-6 lg:col-start-6 lg:ml-10 lg:col-span-3 row-span-2 text-skin-base">
 
           <div class="lg:sticky lg:top-20">
-            <div class="text-center text-skin-accent min-w-[300px]">Advertisement</div>  
+            <!-- <div class="text-center text-skin-accent min-w-[300px]">Advertisement</div>   -->
 
             <!-- <div class="my-6 text-center">
               <div class="ads-slot w-[300px] h-[325px] relative mx-auto">
