UPDATES, search css & ad unit feed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -91,6 +91,19 @@ const socialCount = SOCIALS.filter(social => social.active).length;
                       desc={false}
                     />
                   ))}
+                  <li class="my-6 sm:col-span-2">
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3982586798741178"
+                        crossorigin="anonymous"></script>
+                    <ins class="adsbygoogle"
+                        style="display:block"
+                        data-ad-format="fluid"
+                        data-ad-layout-key="-68+dz+39-dp-1x"
+                        data-ad-client="ca-pub-3982586798741178"
+                        data-ad-slot="5719502981"></ins>
+                    <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                  </li>
                 </ul>
             </section>
             <Hr noPadding={true} />
