--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -65,7 +65,7 @@
     prose-code:rounded prose-code:bg-skin-card 
     prose-code:bg-opacity-75 prose-code:p-1 prose-code:!text-skin-base 
     prose-code:before:!content-[''] prose-code:after:!content-['']
-    prose-pre:!text-skin-base prose-ol:!text-skin-base 
+    prose-pre:!text-[skin-base] prose-ol:!text-skin-base 
     prose-ul:overflow-x-clip prose-ul:!text-skin-base prose-li:marker:!text-skin-accent
     prose-table:text-skin-base prose-th:border
     prose-th:border-skin-line prose-td:border 
@@ -92,6 +92,35 @@
   }
   .prose h2#table-of-contents + p {
     @apply hidden;
+  }
+  code[class*='language-'],
+  pre[class*='language-'],
+  .astro-code code {
+    color: hsl(220, 14%, 71%) !important;
+  }
+  pre[class*='language-'] {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+  .prose :is(:where(figcaption):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
+    @apply !text-white;
+  }
+  
+  .copy-code {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0.25rem 0.5rem;
+    font-size: 0.75rem;
+    line-height: 1rem;
+    @apply bg-skin-accent text-skin-inverted opacity-0 transition-opacity;
+    pre:hover & {
+      @apply opacity-100;
+    }
+  }
+  
+  .copy-code:hover {
+    @apply text-skin-accent-inverted;
   }
 
   /* ===== scrollbar ===== */
